--- a/plugin.xml
+++ b/plugin.xml
@@ -14,10 +14,10 @@
     <!-- android -->
     <platform name="android">
         <js-module src="www/android/keyboard.js" name="keyboard">
-            <clobbers target="cordova.plugins.Keyboard" />
+            <clobbers target="cordova.plugins.IonicKeyboard" />
         </js-module>
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Keyboard">
+            <feature name="IonicKeyboard">
               <param name="android-package" value="io.ionic.keyboard.IonicKeyboard" />
               <param name="onload" value="true" />
             </feature>
@@ -29,10 +29,10 @@
     <!-- ios -->
     <platform name="ios">
         <js-module src="www/ios/keyboard.js" name="keyboard">
-            <clobbers target="cordova.plugins.Keyboard" />
+            <clobbers target="cordova.plugins.IonicKeyboard" />
         </js-module>
         <config-file target="config.xml" parent="/*">
-            <feature name="Keyboard">
+            <feature name="IonicKeyboard">
                 <param name="ios-package" value="IonicKeyboard" onload="true" />
             </feature>
         </config-file>
@@ -43,7 +43,7 @@
 	<!-- browser -->
     <platform name="browser">
         <js-module src="www/browser/keyboard.js" name="keyboard">
-            <clobbers target="cordova.plugins.Keyboard" />
+            <clobbers target="cordova.plugins.IonicKeyboard" />
         </js-module>
     </platform>
 
